Updating testing notebook

--- a/main.ipynb
+++ b/main.ipynb
@@ -21,6 +21,16 @@
     "\n",
     "The environment I'm using for this project involves a Jupyter notebook for testing and observation (this notebook), with my agents called from separate python files. All of this is being utilized within the VSCode IDE. I have imported additional libraries for use in creating and testing my agents, notably numpy, gymnasium, swig, gymnasium[box2d], and tensorflow. Numpy is primarily for reshaping the state space into a readable shape for the model. Gymnasium, swig, and gymnasium[box2d] were all required for running the Car Racing environment. Tensorflow (and subsequently Keras) are used for constructing the DQN agent's model. \n",
     "\n",
+    "Much of the following description of the Car Racing environment comes from the Gymnasium documentation (https://gymnasium.farama.org/environments/box2d/car_racing/). The Car Racing environment itself consists of an action space and an observation space. The action space can be continous or discrete, and I chose the discrete action space as it works better with my choice of DQN model. In the discrete action space, there are five possible actions: \n",
+    "\n",
+    "0: do nothing\n",
+    "1: steer left\n",
+    "2: steer right\n",
+    "3: gas\n",
+    "4: brake\n",
+    "\n",
+    "The observation space for the Car Racing environment is a top down, 96x96px RGB image of the car and race track. The track is randomized for each episode, meaning that a model can't just memorize the correct actions for a single track. The car starts at rest in the center of the track for each episode. Rewards are -0.1 every frame and +1000/N for every track tile visited, where N is the total number of tiles visited in the track. The episode finishes when all tiles in the track are visited, or if the car goes far off the track, in which case it receives -100 reward and dies, terminating the episode. \n",
+    "\n",
     "### Choice of Model ###\n",
     "\n",
     "My approach to choosing the DQN model was perhaps unconventional - rather than identifying a specific model I wanted to use first, and a suitable environment second; I spent time browsing the environments available in Gymnasium to find one that looked interesting first and then reviewed the options for models that would be best suited for learning that environment second. One of the reasons the Car Racing environment stood out to me, in addition to its complexity (it pretty much can't be solved by a random agent), is that one has the option to use either a continuous or a discrete action space with this environment, which didn't limit my potential model options too much. That said, the default action space for this environment is continuous, and this made me curious whether that choice was made because the discrete action space would be more difficult for a model to learn. Ultimately, this helped inform my choice of Deep Q-Network for my agent, because DQNs are well-suited to discrete action spaces. Furthermore, I liked the DQN as an option because it felt like a natural extension of algorithms I've used previously in this class (the approximate Q-learning agent from the Pacman homework and the convolutional neural network I used for the Kaggle competition homework). The DQN shares aspects of both, but is distinct from either as well. \n",
@@ -58,7 +68,7 @@
    "source": [
     "### Setting a Baseline ###\n",
     "\n",
-    "I'll be using a simple random agent to set a baseline for the performance of the DQN agent."
+    "I'll be using a simple random agent to set a baseline for the performance of the DQN agent. The agent is set up as a class in the separate random_agent.py file; this class only has two functions to initialize the agent in the game space and to choose one of the 5 discrete actions at random until the episode terminates. "
    ]
   },
   {
@@ -89,11 +99,13 @@
    "id": "4887f836",
    "metadata": {},
    "source": [
-    "The testing the random agent for 5 episodes shows that it performs very poorly at this game. Not a hard benchmark to beat at least. \n",
+    "The testing the random agent for 5 episodes shows that it performs very poorly at this game. Not a hard benchmark to beat at least. Even the best score it achieves appears to be an outlier in which I suspect it simply found the fastest way to drive straight off the edge of the map. \n",
     "\n",
     "### Testing the DQN ###\n",
     "\n",
-    "Now I want to test the DQN to make sure it even runs. I'll be testing it on a small number of episodes at first - not enough to really see any kind of performance increase at this stage, just making sure it works before training it for 1000 episodes since that will take a while to run. "
+    "Now I want to test the DQN to make sure it even runs. I'll be testing it on a small number of episodes at first - not enough to really see any kind of performance increase at this stage, just making sure it works before training it for 1000 episodes since that will take a while to run. \n",
+    "\n",
+    "The DQN Agent is defined in the dqn_agent.py file. The agent class works by initializing the agent, neural network, replay buffer, and hyperparameters. The agent then interacts with the environment, collecting experiences and storing them in the replay buffer. The agent then trains its neural network model by sampling a minibatch of experiences from the buffer, using these to calculate Q-value targets using the Bellman equation. The agent updates the neural network in such a way as to minimize the differences between the predicted and target Q-values. The epsilon and gamma hyperparameters are tuned to gradually shift the agent from exploring random actions to exploiting its learned policies as the episode progresses. "
    ]
   },
   {
@@ -194,13 +206,21 @@
     "Initial Hyperparameter Values:\n",
     "\n",
     "Learning Rate: 0.001\n",
+    "\n",
     "Discount Factor: 0.95\n",
+    "\n",
     "Exploration Rate: 1.0\n",
+    "\n",
     "Minimum Exploration Rate: 0.01\n",
+    "\n",
     "Epsilon Decay: 0.995\n",
+    "\n",
     "Replay Buffer Size: 2000\n",
+    "\n",
     "Minibatch Size: 128\n",
+    "\n",
     "Number of Neurons per Layer: 12\n",
+    "\n",
     "Activation Function: ReLU\n",
     "\n",
     "The iterative improvements I was able to make in the time I had available for this project were twofold: the first improvement was to decrease the runtime of the model, and the second was to improve the performance of the model. Of course, both changes had inverse effects on the other to varying degrees. My first run of the training loop with the above settings took roughly 16.5 hours to complete and resulted in scores ranging from -225.7 to -306.3 for the 10 episodes. This was an atrocious runtime, and while the performance was better than the baseline set by the random agent, it was not by much in some episodes. \n",
@@ -218,25 +238,29 @@
    "id": "39b44ac9",
    "metadata": {},
    "source": [
-    "## Video Demo ##"
+    "### Video Demo ###\n",
+    "\n",
+    "I did not end up creating a video demo due to the runtime of my model. My most recent iteration has a runtime of roughly 54 minutes per episode of the game with render mode off - this runtime will only increase if I set the render mode to human, even if I run only a single episode. While the rubric doesn't specify the length of the video demo, I'm fairly certain the expectation of the video demos is in the range of seconds or minutes, not hours, and my model can't meet that requirement at this time. "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "29edb8f4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "2a51f420",
+   "id": "3bd7abce",
    "metadata": {},
    "source": [
     "## Conclusion ##\n",
     "\n",
-    "In conclusion, my third iteration of the training loop proves to me beyond a doubt that the DQN model is capable of truly learning the environment of the Car Racing game, vastly outperforming the random agent baseline, and I'm extremely hopeful that this iteration would achieve positive scores given the time to run 1000 episodes. Given unlimited time, the hyperparameters that I would adjust next would be to reduce the number of experiences stored in the memory buffer - I speculate that if I reduced that from storing 2000 experiences to 1000, that it would reduce memory usage and runtime further without compromising the performance I've achieved in this latest round. I chose 2000 experiences back when I thought I would have time not only to test on the Car Racing game, but to move on to testing the DQN agent to the Lunar Landing game as well, and I wanted the model to store enough experiences to generalize well across different environments instead of just memorizing the Car Racing environment's patterns. However, I was obviously underestimating the runtimes of these more complex models on the more complex environments available in the Gymnasium based on my experience with the approximate Q-learning agent on the Pacman environment. I was especially shocked by the runtimes I was experiencing here compared to the CNN runtimes on the histopathic cancer detection assignment because the dataset was so large there - I was sure that the gigabytes worth of data that model needed to crunch would mean the CNN's runtimes would be far longer than anything I would encounter in this project. "
+    "In conclusion, my third iteration of the training loop proves to me beyond a doubt that the DQN model is capable of truly learning the environment of the Car Racing game, vastly outperforming the random agent baseline, and I'm extremely hopeful that this iteration would achieve positive scores given the time to run 1000 episodes. Given unlimited time, the hyperparameters that I would adjust next would be to reduce the number of experiences stored in the memory buffer - I speculate that if I reduced that from storing 2000 experiences to 1000, that it would reduce memory usage and runtime further without compromising the performance I've achieved in this latest round. I chose 2000 experiences back when I thought I would have time not only to test on the Car Racing game, but to move on to testing the DQN agent to the Lunar Landing game as well, and I wanted the model to store enough experiences to generalize well across different environments instead of just memorizing the Car Racing environment's patterns. However, I was obviously underestimating the runtimes of these more complex models on the more complex environments available in the Gymnasium based on my experience with the approximate Q-learning agent on the Pacman environment. I was especially shocked by the runtimes I was experiencing here compared to the CNN runtimes on the histopathic cancer detection assignment because the dataset was so large there - I was sure that the gigabytes worth of data that model needed to crunch would mean the CNN's runtimes would be far longer than anything I would encounter in this project."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13e9b3a4",
+   "metadata": {},
+   "source": [
+    "## References ##\n",
+    "\n",
+    "Klimov, Oleg. (2025). Car Racing - Gymnasium Documentation. https://gymnasium.farama.org/environments/box2d/car_racing/"
    ]
   }
  ],
